--- a/gioithieu.html
+++ b/gioithieu.html
@@ -34,33 +34,67 @@
             color: #74512D;
             font-weight: 700;
         }
+
+        /* ===== NÚT LÊN ĐẦU TRANG ===== */
+        #backToTop {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            width: 45px;
+            height: 45px;
+            background: #c19a6b;
+            color: #fff;
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 18px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            opacity: 0;
+            pointer-events: none;
+            transition: all 0.4s ease;
+            z-index: 1000;
+        }
+
+        #backToTop:hover {
+            background: #b68950;
+            transform: translateY(-4px);
+        }
+
+        /* Khi hiển thị */
+        #backToTop.show {
+            opacity: 1;
+            pointer-events: auto;
+        }
     </style>
 
     <header class="header">
-    <div class="header-top">
-      <div class="logo">
-        <img src="https://i.postimg.cc/5t4yq9qJ/logo-ltw.jpg" alt="Logo">
-        <span><a href="index.html">Noble Loft Theory</a></span>
-      </div>
-      <div class="search-box">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" placeholder="Tìm kiếm">
-      </div>
-      <div class="header-right">
-        <a href="tracking.html">Tra cứu đơn hàng</a>
-        <a href="gioithieu.html">Giới thiệu</a>
-        <a href="contact.html">Liên hệ</a>
-        <div class="icons">
-            <a href="cart.html" class="circle"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="login.html" class="circle"><i class="fa-solid fa-user"></i></a>
+        <div class="header-top">
+            <div class="logo">
+                <img src="https://i.postimg.cc/5t4yq9qJ/logo-ltw.jpg" alt="Logo">
+                <span><a href="home.html">Noble Loft Theory</a></span>
+            </div>
+            <div class="search-box">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" placeholder="Tìm kiếm">
+            </div>
+            <div class="header-right">
+                <a href="tracking.html">Tra cứu đơn hàng</a>
+                <a href="gioithieu.html">Giới thiệu</a>
+                <a href="contact.html">Liên hệ</a>
+                <div class="icons">
+                    <a href="cart.html" class="circle"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="account.html" class="circle"><i class="fa-solid fa-user"></i></a>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
     </header>
 
     <!-- ===== BREADCRUMB / TIẾN TRÌNH ===== -->
     <div class="breadcrumb">
-        <a href="index.html">Trang chủ</a> &#47;
+        <a href="home.html">Trang chủ</a> &#47;
         <span class="current">Giới thiệu </t></span>
     </div>
 
@@ -137,7 +171,8 @@
                         tạo nên không gian sống tiện nghi, gần gũi.
                     </p>
                 </div>
-                <img src="https://i.pinimg.com/1200x/e1/13/24/e11324ba9a92c3c0651731594837e4a4.jpg" alt="Nội Thất" class="value-img">
+                <img src="https://i.pinimg.com/1200x/e1/13/24/e11324ba9a92c3c0651731594837e4a4.jpg" alt="Nội Thất"
+                    class="value-img">
             </div>
 
             <div class="value-card">
@@ -154,7 +189,8 @@
                         là vật dụng nội thất, mà còn là biểu tượng của phong cách sống đẳng cấp và gu thẩm mỹ tinh tế.
                     </p>
                 </div>
-                <img src="https://i.pinimg.com/736x/fa/32/55/fa32552aedaa5f9a55d34a41462ecd73.jpg" alt="Long Trọng" class="value-img">
+                <img src="https://i.pinimg.com/736x/fa/32/55/fa32552aedaa5f9a55d34a41462ecd73.jpg" alt="Long Trọng"
+                    class="value-img">
             </div>
 
             <div class="value-card">
@@ -168,13 +204,15 @@
                         thể hiện tinh thần sáng tạo và phong cách sống riêng của từng khách hàng.
                     </p>
                 </div>
-                <img src="https://i.pinimg.com/736x/c7/e0/aa/c7e0aacaad9db60818f4983776ec8177.jpg" alt="Thiết Kế" class="value-img">
+                <img src="https://i.pinimg.com/736x/c7/e0/aa/c7e0aacaad9db60818f4983776ec8177.jpg" alt="Thiết Kế"
+                    class="value-img">
             </div>
         </div>
 
 
         <div class="slogan-box">
-            <img src="https://i.pinimg.com/736x/66/70/39/6670391806499c5c1b29ba6bdca60184.jpg" alt="Không gian sáng tạo">
+            <img src="https://i.pinimg.com/736x/66/70/39/6670391806499c5c1b29ba6bdca60184.jpg"
+                alt="Không gian sáng tạo">
             <div class="slogan-overlay">
                 <p>“Nâng tầm không gian – Kiến tạo giá trị sống tinh tế.”</p>
             </div>
@@ -194,6 +232,12 @@
         </div>
     </div>
 
+    <!-- NÚT LÊN ĐẦU TRANG -->
+    <button id="backToTop" title="Lên đầu trang">
+        <i class="fa-solid fa-arrow-up"></i>
+    </button>
+
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="container">
             <div class="footer-columns">
@@ -211,38 +255,21 @@
                 <div class="footer-col">
                     <h3>Liên kết</h3>
                     <ul>
-                        <!-- mấy cái # này là chưa có link liên kết nào có gắn v -->
-                        <ul>
-
-                            <div> </div>
-                            <li>
-                                <p href="#"> Chính sách đổi trả hoàn hàng</p>
-                            </li>
-                            <li>
-                                <p href="#"> Chính sách bảo mật mật khẩu</p>
-                            </li>
-                            <li>
-                                <p href="#"> Hướng dẫn mua hàng, sản phẩm</p>
-                            </li>
-                            <li>
-                                <p href="#"> Chính sách kiểm hàng hóa vận chuyển</p>
-                            </li>
-                            <li>
-                                <p href="#"> Chính sách giao hàng tận nơi</p>
-                            </li>
-                            <li>
-                                <p href="#"> Hướng dẫn thanh toán đơn hàng</p>
-                            </li>
-
-                        </ul>
+                        <li><a>Chính sách đổi trả hoàn hàng</a></li>
+                        <li><a>Chính sách bảo mật mật khẩu</a></li>
+                        <li><a>Hướng dẫn mua hàng, sản phẩm</a></li>
+                        <li><a>Chính sách kiểm hàng hóa vận chuyển</a></li>
+                        <li><a>Chính sách giao hàng tận nơi</a></li>
+                        <li><a>Hướng dẫn thanh toán đơn hàng</a></li>
                     </ul>
+
                 </div>
 
                 <!-- Cột 3: Thông tin liên hệ -->
                 <div class="footer-col">
                     <h3>Thông tin liên hệ</h3>
-                    <p><i class="fa fa-map-marker"></i> Khu phố 6, p.Linh Trung, tp.Thủ Đức</p>
-                    <p><i class="fa fa-map-marker"></i> Đại học Nông Lâm tp Hồ Chí Minh</p>
+                    <p><i class="fa fa-map-marker"></i>Khu phố 33, P.Linh Xuân, TP.HCM</p>
+                    <p><i class="fa fa-map-marker"></i> Đại học Nông Lâm TP.Hồ Chí Minh</p>
                     <p><i class="fa fa-phone"></i> Liên hệ: 03751841444 - 03381776315 </p>
 
                     <p><i class="fa fa-envelope"></i> <a
@@ -262,9 +289,12 @@
                         <div class="social-box">
                             <div class="social-icons">
                                 <!-- mấy cái # này là chưa có link liên kết nào có gắn v -->
-                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                                <a href="https://www.facebook.com/share/1HP5fZGNqb/?mibextid=wwXIfr">
+                                    <i class="fa-brands fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/nltnoblelofttheory/">
+                                    <i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.youtube.com/channel/UC931-4vCWPGos5fSNQ8Rh-g">
+                                    <i class="fa-brands fa-youtube"></i></a>
                             </div>
                         </div>
                     </div>
@@ -272,10 +302,30 @@
             </div>
         </div>
 
+        <div class="footer-bottom">
+            <p>Copyright © 2025 NLT Noble Loft Theory. Powered by NLT </p>
+        </div>
         </div>
     </footer>
 
-<script src="js/header.js"></script>
+    <script src="js/header.js"></script>
+    <script>// Nút quay lại đầu trang
+        const backToTopBtn = document.getElementById("backToTop");
+
+        window.addEventListener("scroll", () => {
+            if (window.scrollY > 300) {
+                backToTopBtn.classList.add("show");
+            } else {
+                backToTopBtn.classList.remove("show");
+            }
+        });
+
+        backToTopBtn.addEventListener("click", () => {
+            window.scrollTo({
+                top: 0,
+                behavior: "smooth",
+            });
+        });</script>
 </body>
 
 </html>
