--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
         </div>
 
         <nav class="menu">
-            <a href="index.html" class="active">Trang chủ</a>
+            <a href="home.html" class="active">Trang chủ</a>
             <a href="living.html" class="">Phòng khách</a>
             <a href="kitchen.html" class="">Phòng bếp</a>
             <a href="bedroom.html" class="">Phòng ngủ</a>
@@ -411,38 +411,21 @@
                 <div class="footer-col">
                     <h3>Liên kết</h3>
                     <ul>
-                        <!-- mấy cái # này là chưa có link liên kết nào có gắn v -->
-                        <ul>
-
-                            <div> </div>
-                            <li>
-                                <p href="#"> Chính sách đổi trả hoàn hàng</p>
-                            </li>
-                            <li>
-                                <p href="#"> Chính sách bảo mật mật khẩu</p>
-                            </li>
-                            <li>
-                                <p href="#"> Hướng dẫn mua hàng, sản phẩm</p>
-                            </li>
-                            <li>
-                                <p href="#"> Chính sách kiểm hàng hóa vận chuyển</p>
-                            </li>
-                            <li>
-                                <p href="#"> Chính sách giao hàng tận nơi</p>
-                            </li>
-                            <li>
-                                <p href="#"> Hướng dẫn thanh toán đơn hàng</p>
-                            </li>
-
-                        </ul>
+                        <li><a>Chính sách đổi trả hoàn hàng</a></li>
+                        <li><a>Chính sách bảo mật mật khẩu</a></li>
+                        <li><a>Hướng dẫn mua hàng, sản phẩm</a></li>
+                        <li><a>Chính sách kiểm hàng hóa vận chuyển</a></li>
+                        <li><a>Chính sách giao hàng tận nơi</a></li>
+                        <li><a>Hướng dẫn thanh toán đơn hàng</a></li>
                     </ul>
+
                 </div>
 
                 <!-- Cột 3: Thông tin liên hệ -->
                 <div class="footer-col">
                     <h3>Thông tin liên hệ</h3>
-                    <p><i class="fa fa-map-marker"></i> Khu phố 6, p.Linh Trung, tp.Thủ Đức</p>
-                    <p><i class="fa fa-map-marker"></i> Đại học Nông Lâm tp Hồ Chí Minh</p>
+                    <p><i class="fa fa-map-marker"></i>Khu phố 33, P.Linh Xuân, TP.HCM</p>
+                    <p><i class="fa fa-map-marker"></i> Đại học Nông Lâm TP.Hồ Chí Minh</p>
                     <p><i class="fa fa-phone"></i> Liên hệ: 03751841444 - 03381776315 </p>
 
                     <p><i class="fa fa-envelope"></i> <a
@@ -462,9 +445,12 @@
                         <div class="social-box">
                             <div class="social-icons">
                                 <!-- mấy cái # này là chưa có link liên kết nào có gắn v -->
-                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                                <a href="https://www.facebook.com/share/1HP5fZGNqb/?mibextid=wwXIfr">
+                                    <i class="fa-brands fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/nltnoblelofttheory/">
+                                    <i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.youtube.com/channel/UC931-4vCWPGos5fSNQ8Rh-g">
+                                    <i class="fa-brands fa-youtube"></i></a>
                             </div>
                         </div>
                     </div>
